--- a/package.json/package.json
+++ b/package.json/package.json
@@ -14,6 +14,7 @@
     }
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/"
+		"url": "git+https://github.com/ElvisChanHK/COMP381F"
   },
 }
+
